@@ -18,10 +18,9 @@ package org.graylog2.rest.resources.streams;
 
 import com.codahale.metrics.annotation.Timed;
 import com.google.common.base.Strings;
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Lists;
 import com.google.common.collect.Maps;
+import com.google.common.collect.Sets;
 import com.google.common.util.concurrent.ThreadFactoryBuilder;
 import io.swagger.annotations.Api;
 import io.swagger.annotations.ApiOperation;
@@ -41,14 +40,20 @@ import org.graylog2.indexer.IndexSet;
 import org.graylog2.indexer.IndexSetRegistry;
 import org.graylog2.plugin.Message;
 import org.graylog2.plugin.Tools;
+import org.graylog2.plugin.database.Persisted;
 import org.graylog2.plugin.database.ValidationException;
 import org.graylog2.plugin.streams.Output;
 import org.graylog2.plugin.streams.Stream;
 import org.graylog2.plugin.streams.StreamRule;
 import org.graylog2.rest.models.streams.requests.UpdateStreamRequest;
 import org.graylog2.rest.models.system.outputs.responses.OutputSummary;
+import org.graylog2.rest.resources.entities.EntityAttribute;
+import org.graylog2.rest.resources.entities.EntityDefaults;
+import org.graylog2.rest.resources.entities.FilterOption;
+import org.graylog2.rest.resources.entities.Sorting;
 import org.graylog2.rest.resources.streams.requests.CloneStreamRequest;
 import org.graylog2.rest.resources.streams.requests.CreateStreamRequest;
+import org.graylog2.rest.resources.streams.responses.StreamCreatedResponse;
 import org.graylog2.rest.resources.streams.responses.StreamListResponse;
 import org.graylog2.rest.resources.streams.responses.StreamPageListResponse;
 import org.graylog2.rest.resources.streams.responses.StreamResponse;
@@ -62,14 +67,11 @@ import org.graylog2.streams.PaginatedStreamService;
 import org.graylog2.streams.StreamDTO;
 import org.graylog2.streams.StreamImpl;
 import org.graylog2.streams.StreamRouterEngine;
-import org.graylog2.streams.StreamRuleImpl;
 import org.graylog2.streams.StreamRuleService;
 import org.graylog2.streams.StreamService;
 import org.joda.time.DateTime;
 import org.joda.time.DateTimeZone;
 import org.joda.time.format.ISODateTimeFormat;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
 import javax.inject.Inject;
 import javax.validation.Valid;
@@ -90,14 +92,14 @@ import javax.ws.rs.core.Context;
 import javax.ws.rs.core.MediaType;
 import javax.ws.rs.core.Response;
 import java.net.URI;
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
-import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
@@ -111,13 +113,29 @@ import static org.graylog2.shared.rest.documentation.generator.Generator.CLOUD_V
 @Api(value = "Streams", description = "Manage streams", tags = {CLOUD_VISIBLE})
 @Path("/streams")
 public class StreamResource extends RestResource {
-    private static final Logger LOG = LoggerFactory.getLogger(StreamResource.class);
+    private static final String DEFAULT_SORT_FIELD = StreamDTO.FIELD_TITLE;
+    private static final String DEFAULT_SORT_DIRECTION = "asc";
+    private static final List<EntityAttribute> attributes = List.of(
+            EntityAttribute.builder().id("title").title("Title").build(),
+            EntityAttribute.builder().id("description").title("Description").build(),
+            EntityAttribute.builder().id("created_at").title("Created").type("date").build(),
+            EntityAttribute.builder().id("status").title("Status").type("boolean").filterable(true).filterOptions(Set.of(
+                    FilterOption.create("paused", "Paused"),
+                    FilterOption.create("running", "Running")
+            )).build()
+    );
 
-    protected static final ImmutableMap<String, SearchQueryField> SEARCH_FIELD_MAPPING = ImmutableMap.<String, SearchQueryField>builder()
-            .put("id", SearchQueryField.create(StreamDTO.FIELD_ID, SearchQueryField.Type.OBJECT_ID))
-            .put(StreamDTO.FIELD_TITLE, SearchQueryField.create(StreamDTO.FIELD_TITLE))
-            .put(StreamDTO.FIELD_DESCRIPTION, SearchQueryField.create(StreamDTO.FIELD_DESCRIPTION))
+    private static final EntityDefaults settings = EntityDefaults.builder()
+            .sort(Sorting.create(DEFAULT_SORT_FIELD, Sorting.Direction.valueOf(DEFAULT_SORT_DIRECTION.toUpperCase(Locale.ROOT))))
             .build();
+
+    protected static final Map<String, SearchQueryField> SEARCH_FIELD_MAPPING = Map.of(
+            "id", SearchQueryField.create(StreamDTO.FIELD_ID, SearchQueryField.Type.OBJECT_ID),
+            StreamDTO.FIELD_TITLE, SearchQueryField.create(StreamDTO.FIELD_TITLE),
+            StreamDTO.FIELD_DESCRIPTION, SearchQueryField.create(StreamDTO.FIELD_DESCRIPTION),
+            StreamDTO.FIELD_CREATED_AT, SearchQueryField.create(StreamDTO.FIELD_CREATED_AT),
+            "status", SearchQueryField.create(StreamDTO.FIELD_DISABLED)
+    );
 
     private final PaginatedStreamService paginatedStreamService;
     private final StreamService streamService;
@@ -142,7 +160,7 @@ public class StreamResource extends RestResource {
 
     @POST
     @Timed
-    @ApiOperation(value = "Create a stream")
+    @ApiOperation(value = "Create a stream", response = StreamCreatedResponse.class)
     @RequiresPermissions(RestPermissions.STREAMS_CREATE)
     @Consumes(MediaType.APPLICATION_JSON)
     @Produces(MediaType.APPLICATION_JSON)
@@ -154,18 +172,14 @@ public class StreamResource extends RestResource {
         stream.setDisabled(true);
 
         final IndexSet indexSet = stream.getIndexSet();
-        if (!indexSet.getConfig().isWritable()) {
-            throw new BadRequestException("Assigned index set must be writable!");
-        } else if (!indexSet.getConfig().isRegularIndex()) {
-            throw new BadRequestException("Assigned index set is not usable");
-        }
+        checkIndexSet(indexSet);
 
-    final Set<StreamRule> streamRules = cr.rules().stream()
+        final Set<StreamRule> streamRules = cr.rules().stream()
                 .map(streamRule -> streamRuleService.create(null, streamRule))
                 .collect(Collectors.toSet());
         final String id = streamService.saveWithRulesAndOwnership(stream, streamRules, userContext.getUser());
 
-        final Map<String, String> result = ImmutableMap.of("stream_id", id);
+        var result = new StreamCreatedResponse(id);
         final URI streamUri = getUriBuilderToSelf().path(StreamResource.class)
             .path("{streamId}")
             .build(id);
@@ -184,10 +198,10 @@ public class StreamResource extends RestResource {
         @ApiParam(name = "sort",
                 value = "The field to sort the result on",
                 required = true,
-                allowableValues = "title,description")
-        @DefaultValue(StreamImpl.FIELD_TITLE) @QueryParam("sort") String sort,
+                allowableValues = "title,description,created_at,updated_at,status")
+        @DefaultValue(DEFAULT_SORT_FIELD) @QueryParam("sort") String sort,
         @ApiParam(name = "order", value = "The sort direction", allowableValues = "asc, desc")
-        @DefaultValue("asc") @QueryParam("order") String order) {
+        @DefaultValue(DEFAULT_SORT_DIRECTION) @QueryParam("order") String order) {
 
         SearchQuery searchQuery;
         try {
@@ -195,19 +209,26 @@ public class StreamResource extends RestResource {
         } catch (IllegalArgumentException e) {
             throw new BadRequestException("Invalid argument in search query: " + e.getMessage());
         }
+
         final Predicate<StreamDTO> permissionFilter = streamDTO -> isPermitted(RestPermissions.STREAMS_READ, streamDTO.id());
         final PaginatedList<StreamDTO> result = paginatedStreamService
                 .findPaginated(searchQuery, permissionFilter, page, perPage, sort, order);
-        final List<String> streamIds = result.stream().map(streamDTO -> streamDTO.id()).collect(Collectors.toList());
+
+        final List<String> streamIds = result.stream().map(StreamDTO::id).toList();
         final Map<String, List<StreamRule>> streamRuleMap = streamRuleService.loadForStreamIds(streamIds);
-        final List<StreamDTO> streams = result.stream().map(streamDTO -> {
-            List<StreamRule> rules = streamRuleMap.getOrDefault(streamDTO.id(), Collections.emptyList());
-            return streamDTO.toBuilder().rules(rules).build();
-        }).collect(Collectors.toList());
+
+        final List<StreamDTO> streams = result
+                .stream()
+                .map(streamDTO -> {
+                    final List<StreamRule> rules = streamRuleMap.getOrDefault(streamDTO.id(), Collections.emptyList());
+                    return streamDTO.toBuilder().rules(rules).build();
+                })
+                .toList();
         final long total = paginatedStreamService.count();
-        final PaginatedList<StreamDTO> streamDTOS = new PaginatedList<>(streams,
-                result.pagination().total(), result.pagination().page(), result.pagination().perPage());
-        return StreamPageListResponse.create(query, streamDTOS.pagination(), total, sort, order, streams);
+        final PaginatedList<StreamDTO> streamDTOS = new PaginatedList<>(
+                streams, result.pagination().total(), result.pagination().page(), result.pagination().perPage()
+        );
+        return StreamPageListResponse.create(query, streamDTOS.pagination(), total, sort, order, streams, attributes, settings);
     }
 
     @GET
@@ -216,13 +237,10 @@ public class StreamResource extends RestResource {
     @Deprecated
     @Produces(MediaType.APPLICATION_JSON)
     public StreamListResponse get() {
-        final List<Stream> allStreams = streamService.loadAll();
-        final List<Stream> streams = new ArrayList<>(allStreams.size());
-        for (Stream stream : allStreams) {
-            if (isPermitted(RestPermissions.STREAMS_READ, stream.getId())) {
-                streams.add(stream);
-            }
-        }
+        final List<Stream> streams = streamService.loadAll()
+                .stream()
+                .filter(stream -> isPermitted(RestPermissions.STREAMS_READ, stream.getId()))
+                .toList();
 
         return StreamListResponse.create(streams.size(), streams.stream().map(this::streamToResponse).collect(Collectors.toSet()));
     }
@@ -233,13 +251,10 @@ public class StreamResource extends RestResource {
     @ApiOperation(value = "Get a list of all enabled streams")
     @Produces(MediaType.APPLICATION_JSON)
     public StreamListResponse getEnabled() throws NotFoundException {
-        final List<Stream> enabledStreams = streamService.loadAllEnabled();
-        final List<Stream> streams = new ArrayList<>(enabledStreams.size());
-        for (Stream stream : enabledStreams) {
-            if (isPermitted(RestPermissions.STREAMS_READ, stream.getId())) {
-                streams.add(stream);
-            }
-        }
+        final List<Stream> streams = streamService.loadAllEnabled()
+                .stream()
+                .filter(stream -> isPermitted(RestPermissions.STREAMS_READ, stream.getId()))
+                .toList();
 
         return StreamListResponse.create(streams.size(), streams.stream().map(this::streamToResponse).collect(Collectors.toSet()));
     }
@@ -298,7 +313,7 @@ public class StreamResource extends RestResource {
         }
 
         final Boolean removeMatchesFromDefaultStream = cr.removeMatchesFromDefaultStream();
-        if(removeMatchesFromDefaultStream != null) {
+        if (removeMatchesFromDefaultStream != null) {
             stream.setRemoveMatchesFromDefaultStream(removeMatchesFromDefaultStream);
         }
 
@@ -308,13 +323,13 @@ public class StreamResource extends RestResource {
             stream.setIndexSetId(cr.indexSetId());
         }
 
-        final Optional<IndexSet> indexSet = indexSetRegistry.get(stream.getIndexSetId());
+        final IndexSet indexSet = indexSetRegistry.get(stream.getIndexSetId())
+                .orElseThrow(() -> new BadRequestException("Index set with ID <" + stream.getIndexSetId() + "> does not exist!"));
 
-        if (!indexSet.isPresent()) {
-            throw new BadRequestException("Index set with ID <" + stream.getIndexSetId() + "> does not exist!");
-        } else if (!indexSet.get().getConfig().isWritable()) {
+        if (!indexSet.getConfig().isWritable()) {
             throw new BadRequestException("Assigned index set must be writable!");
-        } else if (!indexSet.get().getConfig().isRegularIndex()) {
+        }
+        if (!indexSet.getConfig().isRegularIndex()) {
             throw new BadRequestException("Assigned index set is not usable");
         }
 
@@ -420,7 +435,7 @@ public class StreamResource extends RestResource {
     @POST
     @Path("/{streamId}/clone")
     @Timed
-    @ApiOperation(value = "Clone a stream")
+    @ApiOperation(value = "Clone a stream", response = StreamCreatedResponse.class)
     @ApiResponses(value = {
         @ApiResponse(code = 404, message = "Stream not found."),
         @ApiResponse(code = 400, message = "Invalid or missing Stream id.")
@@ -439,32 +454,24 @@ public class StreamResource extends RestResource {
         final String creatorUser = getCurrentUser().getName();
 
         final List<StreamRule> sourceStreamRules = streamRuleService.loadForStream(sourceStream);
-        final ImmutableSet.Builder<StreamRule> newStreamRules = ImmutableSet.builderWithExpectedSize(sourceStreamRules.size());
-        for (StreamRule streamRule : sourceStreamRules) {
-            final Map<String, Object> streamRuleData = Maps.newHashMapWithExpectedSize(6);
+        final Set<StreamRule> newStreamRules = sourceStreamRules
+                .stream()
+                .map(streamRule -> streamRuleService.copy(null, streamRule))
+                .collect(Collectors.toSet());
 
-            streamRuleData.put(StreamRuleImpl.FIELD_TYPE, streamRule.getType().toInteger());
-            streamRuleData.put(StreamRuleImpl.FIELD_FIELD, streamRule.getField());
-            streamRuleData.put(StreamRuleImpl.FIELD_VALUE, streamRule.getValue());
-            streamRuleData.put(StreamRuleImpl.FIELD_INVERTED, streamRule.getInverted());
-            streamRuleData.put(StreamRuleImpl.FIELD_DESCRIPTION, streamRule.getDescription());
-
-            final StreamRule newStreamRule = streamRuleService.create(streamRuleData);
-            newStreamRules.add(newStreamRule);
-        }
-
-        final Map<String, Object> streamData = Maps.newHashMap();
-        streamData.put(StreamImpl.FIELD_TITLE, cr.title());
-        streamData.put(StreamImpl.FIELD_DESCRIPTION, cr.description());
-        streamData.put(StreamImpl.FIELD_CREATOR_USER_ID, creatorUser);
-        streamData.put(StreamImpl.FIELD_CREATED_AT, Tools.nowUTC());
-        streamData.put(StreamImpl.FIELD_MATCHING_TYPE, sourceStream.getMatchingType().toString());
-        streamData.put(StreamImpl.FIELD_REMOVE_MATCHES_FROM_DEFAULT_STREAM, cr.removeMatchesFromDefaultStream());
-        streamData.put(StreamImpl.FIELD_DISABLED, true);
-        streamData.put(StreamImpl.FIELD_INDEX_SET_ID, cr.indexSetId());
+        final Map<String, Object> streamData = Map.of(
+            StreamImpl.FIELD_TITLE, cr.title(),
+            StreamImpl.FIELD_DESCRIPTION, cr.description(),
+            StreamImpl.FIELD_CREATOR_USER_ID, creatorUser,
+            StreamImpl.FIELD_CREATED_AT, Tools.nowUTC(),
+            StreamImpl.FIELD_MATCHING_TYPE, sourceStream.getMatchingType().toString(),
+            StreamImpl.FIELD_REMOVE_MATCHES_FROM_DEFAULT_STREAM, cr.removeMatchesFromDefaultStream(),
+            StreamImpl.FIELD_DISABLED, true,
+            StreamImpl.FIELD_INDEX_SET_ID, cr.indexSetId()
+        );
 
         final Stream stream = streamService.create(streamData);
-        final String savedStreamId = streamService.saveWithRulesAndOwnership(stream, newStreamRules.build(), userContext.getUser());
+        final String savedStreamId = streamService.saveWithRulesAndOwnership(stream, newStreamRules, userContext.getUser());
         final ObjectId savedStreamObjectId = new ObjectId(savedStreamId);
 
         final Set<ObjectId> outputIds = sourceStream.getOutputs().stream()
@@ -473,12 +480,59 @@ public class StreamResource extends RestResource {
                 .collect(Collectors.toSet());
         streamService.addOutputs(savedStreamObjectId, outputIds);
 
-        final Map<String, String> result = ImmutableMap.of("stream_id", savedStreamId);
+        var result = new StreamCreatedResponse(savedStreamId);
         final URI streamUri = getUriBuilderToSelf().path(StreamResource.class)
             .path("{streamId}")
             .build(savedStreamId);
 
         return Response.created(streamUri).entity(result).build();
+    }
+
+    @PUT
+    @Path("/indexSet/{indexSetId}")
+    @Timed
+    @ApiOperation(value = "Assign multiple streams to index set")
+    @ApiResponses(value = {
+            @ApiResponse(code = 404, message = "Index set not found.")
+    })
+    @Consumes(MediaType.APPLICATION_JSON)
+    @Produces(MediaType.APPLICATION_JSON)
+    @AuditEvent(type = AuditEventTypes.STREAM_UPDATE)
+    public Response assignToIndexSet(@ApiParam(name = "indexSetId", required = true) @PathParam("indexSetId") String indexSetId,
+                                    @ApiParam(name = "JSON body", required = true) @Valid @NotNull List<String> streamIds) {
+        checkPermission(RestPermissions.INDEXSETS_READ, indexSetId);
+        streamIds.forEach(streamId -> {
+            checkPermission(RestPermissions.STREAMS_EDIT, streamId);
+            checkNotEditableStream(streamId, "The stream with id <" + streamId + "> cannot be edited.");
+        });
+
+        final Set<String> existingStreams = streamService.loadByIds(streamIds)
+                .stream()
+                .map(Persisted::getId)
+                .collect(Collectors.toSet());
+
+        final Set<String> missingStreams = Sets.difference(new HashSet<>(streamIds), existingStreams);
+
+        if (!missingStreams.isEmpty()) {
+            return Response.status(Response.Status.NOT_FOUND).entity("Missing streams: " + missingStreams).build();
+        }
+
+        return indexSetRegistry.get(indexSetId)
+                .map(indexSet -> {
+                    checkIndexSet(indexSet);
+
+                    streamService.addToIndexSet(indexSetId, streamIds);
+                    return Response.ok().build();
+                })
+                .orElse(Response.status(Response.Status.NOT_FOUND).build());
+    }
+
+    private void checkIndexSet(IndexSet indexSet) {
+        if (!indexSet.getConfig().isWritable()) {
+            throw new BadRequestException("Assigned index set must be writable!");
+        } else if (!indexSet.getConfig().isRegularIndex()) {
+            throw new BadRequestException("Assigned index set is not usable");
+        }
     }
 
     private StreamResponse streamToResponse(Stream stream) {
